--- a/styling/style.scss
+++ b/styling/style.scss
@@ -96,3 +96,17 @@ nav {
       margin: 1rem;
       height: 100vh;
   }
+
+.popular-people{
+    display: flex;
+} 
+
+.container{
+    display: flex;
+}
+
+.person{
+    width: 100%;
+    margin: 1rem;
+    border:1px solid blue;
+}
