--- a/styling/style.css
+++ b/styling/style.css
@@ -11,34 +11,54 @@ body {
 }
 
 .logo {
-  font-size: 3rem;
+  font-size: 2rem;
+}
+
+.logo2 {
+  font-family: "Roboto", sans-serif;
 }
 
 nav {
   font-family: "Roboto", sans-serif;
   color: #d0e1f9;
-  padding: 1rem 1rem 1rem 1rem;
-  width: 14rem;
-  background-color: #283655;
-  height: 100vh;
-  position: fixed;
+  width: 100%;
+  background-color: #18191A;
 }
 
 nav a {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #d0e1f9;
+  padding: 1rem;
 }
 
 nav a:hover {
-  font-size: 1.4rem;
+  border-radius: 30px;
+  background-color: #4d648d;
+}
+
+nav .nav-bar {
+  padding: 0 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 nav .nav-bar div {
-  border-radius: 10px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+nav .nav-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .icon {
@@ -51,25 +71,18 @@ nav .nav-bar div {
   list-style-type: none;
 }
 
-#main {
-  padding-left: 14rem;
-  width: 100%;
-}
-
 .main-header {
-  width: 100%;
-  height: 6vh;
-  background-color: rgba(40, 54, 85, 0.7);
-  margin: 0;
-  padding: 1rem;
-  padding-right: 3rem;
+  width: 30%;
+  height: 4vh;
+  background-color: #1e1f26;
+  margin: auto;
   font-size: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .search-form {
@@ -77,7 +90,7 @@ nav .nav-bar div {
   display: -ms-flexbox;
   display: flex;
   padding: none;
-  width: 30%;
+  width: 100%;
 }
 
 .search-form input {
@@ -93,7 +106,6 @@ nav .nav-bar div {
 
 .search-form button {
   border: none;
-  padding: 0.5rem;
   font-size: 1rem;
   color: white;
   background: transparent;
@@ -101,25 +113,53 @@ nav .nav-bar div {
 }
 
 .movie-body {
-  margin: 1rem;
-  height: 100vh;
+  width: 85%;
+  border: 1px solid #d0e1f9;
+  margin: auto;
 }
 
 .popular-people {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: auto;
+  width: 70%;
+}
+
+@media (max-width: 1200px) {
+  .popular-people {
+    width: 90%;
+  }
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  padding: 1rem;
+  margin: 0 0.5rem;
 }
 
 .person {
   width: 100%;
-  margin: 1rem;
-  border: 1px solid blue;
+  margin: auto;
+  margin-bottom: 0;
+  min-height: 20vh;
+}
+
+.person-details {
+  background-color: #283655;
+  padding: 0 1rem;
+  margin: auto;
+  margin-top: 0;
+  min-width: 100%;
+  color: white;
+  height: 10vh;
+}
+
+.person-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
