--- a/styling/style.scss
+++ b/styling/style.scss
@@ -7,36 +7,44 @@
 body {
     background: #1e1f26;
     margin: 0;
-
 }
 
-.logo{
-    font-size: 3rem;
+.logo {
+    font-size: 2rem;
+}
+.logo2 {
+    font-family: "Roboto", sans-serif;
 }
 
 nav {
     font-family: "Roboto", sans-serif;
     color: #d0e1f9;
-    padding: 1rem 1rem 1rem 1rem;
-    width: 14rem;
-    background-color: #283655;
-    height: 100vh;
-    position: fixed;
+    width: 100%;
+    background-color: #18191A;
+
     a {
         font-family: "Roboto", sans-serif;
         text-decoration: none;
-        font-size: 1.2rem;
+        font-size: 1rem;
         color: #d0e1f9;
+        padding: 1rem;
         &:hover {
-            font-size: 1.4rem;
+            border-radius: 30px;
+            background-color:#4d648d;
         }
     }
     .nav-bar {
+        padding: 0 1rem;
+        display: flex;
+        justify-content: space-between;
         div {
-            border-radius: 10px;
-            padding-top: 1rem;
-            padding-bottom: 1rem;
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
         }
+    }
+    .nav-btns{
+        display: flex;
+        justify-content: space-around;
     }
 }
 
@@ -48,65 +56,82 @@ nav {
 .genre-list {
     padding-left: 1rem;
     list-style-type: none;
-
-}
-
-#main{
-    padding-left: 14rem;
-    width: 100%;
 }
 
 
-.main-header{
-    width: 100%;
-    height: 6vh;
-    background-color: rgba(40,54,85,0.7)    ;
-    margin: 0;
-    padding: 1rem;
-    padding-right: 3rem;
+.main-header {
+    width: 30%;
+    height: 4vh;
+    background-color:#1e1f26;
+    margin: auto;
     font-size: 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 // Search Bar
 .search-form {
     display: flex;
     padding: none;
-    width: 30%;
-  }
-  .search-form input {
+    width: 100%;
+}
+.search-form input {
     font-size: 1rem;
     width: 100%;
     border: none;
     background: transparent;
-    &:focus{
+    &:focus {
         background: transparent;
     }
-  }
-  .search-form button {
+}
+.search-form button {
     border: none;
-    padding: 0.5rem;
     font-size: 1rem;
     color: white;
-    background:transparent;
+    background: transparent;
     cursor: pointer;
-  }
-
-  .movie-body{
-      margin: 1rem;
-      height: 100vh;
-  }
-
-.popular-people{
-    display: flex;
-} 
-
-.container{
-    display: flex;
 }
 
-.person{
+.movie-body {  
+    width: 85%;
+    border: 1px solid #d0e1f9;
+    margin: auto;
+}
+
+
+.popular-people {
+    display: flex;
+    margin: auto;
+    width: 70%;
+}
+@media (max-width: 1200px) {
+    .popular-people {
+        width: 90%;
+    }
+}
+
+.container {
+    padding: 1rem;
+    margin: 0 0.5rem;
+}
+
+.person {
     width: 100%;
-    margin: 1rem;
-    border:1px solid blue;
+    margin: auto;
+    margin-bottom: 0;
+    min-height: 20vh;
+}
+
+.person-details {
+    background-color: #283655;
+    padding: 0 1rem;
+    margin: auto;
+    margin-top: 0;
+    min-width: 100%;
+    color: white;
+    height: 10vh;
+}
+
+.person-header {
+    display: flex;
+    justify-content: space-between;
 }
