--- a/styling/style.scss
+++ b/styling/style.scss
@@ -93,15 +93,18 @@ nav {
 
 .movie-body {  
     width: 85%;
-    border: 1px solid #d0e1f9;
     margin: auto;
+    h1{
+        font-family: "Roboto", sans-serif;
+        color: white;
+    }
 }
 
 
 .popular-people {
     display: flex;
     margin: auto;
-    width: 70%;
+    width: 80%;
 }
 @media (max-width: 1200px) {
     .popular-people {
@@ -119,6 +122,7 @@ nav {
     margin: auto;
     margin-bottom: 0;
     min-height: 20vh;
+
 }
 
 .person-details {
@@ -128,7 +132,8 @@ nav {
     margin-top: 0;
     min-width: 100%;
     color: white;
-    height: 10vh;
+    height: 7vh;
+
 }
 
 .person-header {
