--- a/styling/style.css
+++ b/styling/style.css
@@ -22,7 +22,7 @@ nav {
   font-family: "Roboto", sans-serif;
   color: #d0e1f9;
   width: 100%;
-  background-color: #18191A;
+  background-color: #18191a;
 }
 
 nav a {
@@ -113,7 +113,7 @@ nav .nav-btns {
 }
 
 .movie-body {
-  width: 85%;
+  width: 80%;
   margin: auto;
 }
 
@@ -122,48 +122,77 @@ nav .nav-btns {
   color: white;
 }
 
-.popular-people {
+.trending-movies, .popular-people, .now-playing {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: auto;
-  width: 80%;
+  border: 1px solid blue;
 }
 
-@media (max-width: 1200px) {
-  .popular-people {
-    width: 90%;
-  }
-}
-
-.container {
-  padding: 1rem;
-  margin: 0 0.5rem;
-}
-
-.person {
-  width: 100%;
-  margin: auto;
-  margin-bottom: 0;
-  min-height: 20vh;
-}
-
-.person-details {
-  background-color: #283655;
-  padding: 0 1rem;
-  margin: auto;
-  margin-top: 0;
-  min-width: 100%;
+.markup-container {
   color: white;
-  height: 7vh;
+  font-family: "Roboto", sans-serif;
+  width: 100%;
+  margin: 1rem;
 }
 
-.person-header {
+.markup-image {
+  width: 100%;
+}
+
+.detail-header {
+  background-color: #283655;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0 1rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.detail-header2 {
+  background-color: #283655;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.trailer {
+  cursor: pointer;
+}
+
+.trailer:hover {
+  text-decoration: underline;
+  color: #d0e1f9;
+}
+
+.overlay-container {
+  position: relative;
+}
+
+.overlay-container img {
+  display: block;
+}
+
+.overlay-container .overlay {
+  position: absolute;
+  top: 0;
+  background: black;
+  background: rgba(0, 0, 0, 0.9);
+  /* Black see-through */
+  opacity: 0;
+  margin: auto;
+  padding: 1rem;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+.overlay-container .overlay:hover {
+  opacity: 1;
 }
 /*# sourceMappingURL=style.css.map */
