--- a/styling/style.scss
+++ b/styling/style.scss
@@ -91,28 +91,95 @@ nav {
 }
 
 .movie-body {
-    width: 80%;
+    background-color: #1e1f26;
+    width: 60%;
+    min-width: 1100px;
     margin: auto;
     h1 {
+        font-size: 3rem;
+        padding:1rem 0;
+        font-family: "Roboto", sans-serif;
+        color: white;
+    } h2{
         font-family: "Roboto", sans-serif;
         color: white;
     }
 }
 
-.trending-movies, .popular-people, .now-playing{
+.trending-movies, .now-playing{
     display: flex;
+    width: 70%;
+}
 
+.popular-people{
+    display: flex;
+    width: 100%;
+}
+
+.movie-flex{
+    display: flex;
+}
+
+.now-playing-news{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 30%;
+    padding: 0 1rem;
+    h1{
+        margin: 0;
+    }
+    ul{
+        list-style-type: none;
+        color: white;
+        font-size: 1.1rem;
+    }
+}
+
+.weekly-trend{
+    display: flex;
+    flex-direction: column;
+    margin: none;
+    a{
+        color: #d0e1f9;
+        text-decoration: none;
+        font-size: 1.1rem;
+        padding: 1em;
+        font-family: "Roboto", sans-serif;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+}
+
+
+.more-info{
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-family: "Roboto", sans-serif;
+    color: white;
+    background: #283655;
+    padding: 0.5rem;
+    width: 100%;
+    text-align: center;
+    border-radius: 10rem;
 }
 
 .markup-container {
+    border: 2px solid pink;
     color: white;
     font-family: "Roboto", sans-serif;
     width: 100%;
-    margin: 1rem;
+    margin: 0.4rem;
 }
 
 .markup-image{
     width: 100%;
+}
+
+.markup-details{
+    border: 1px solid blue;
+    background-color:#283655 
 }
 
 .detail-header{
@@ -136,6 +203,7 @@ nav {
     }
 }
 
+
 // overlay
 
 .overlay-container{
@@ -144,6 +212,7 @@ nav {
         display: block;
     }
     .overlay{
+        overflow-y: scroll;
         position: absolute; 
         top: 0; 
         background: rgb(0, 0, 0);
@@ -156,5 +225,36 @@ nav {
         &:hover{
             opacity: 1;
         }
+    }
+}
+
+
+.footer-row1, .footer-row2, .footer-row3{
+    display: flex;
+    background: black;
+    justify-content: center;
+    color: #d0e1f9;
+    font-size: 1.5rem;
+    font-family: "Roboto", sans-serif;
+}
+
+.footer-row1{
+    margin-top: 3vh;
+}
+
+.footer-row3{
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+
+.footer-row1 ul{
+    
+    list-style-type: none;
+    display:flex;
+    li{
+        font-size: 1.5rem;
+        padding: 1rem;
+        color: #d0e1f9;
     }
 }
