--- a/styling/style.css
+++ b/styling/style.css
@@ -115,7 +115,7 @@ nav .nav-btns {
 .movie-body {
   background-color: #1e1f26;
   width: 60%;
-  min-width: 1100px;
+  min-width: 1150px;
   margin: auto;
 }
 
@@ -131,7 +131,8 @@ nav .nav-btns {
   color: white;
 }
 
-.trending-movies, .now-playing {
+.trending-movies,
+.now-playing {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -285,7 +286,9 @@ nav .nav-btns {
   opacity: 1;
 }
 
-.footer-row1, .footer-row2, .footer-row3 {
+.footer-row1,
+.footer-row2,
+.footer-row3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -323,5 +326,31 @@ nav .nav-btns {
   font-size: 1.5rem;
   padding: 1rem;
   color: #d0e1f9;
+}
+
+.search-results {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background: #283655;
+  width: 100%;
+  margin-top: 2vh;
+  border-radius: 50px;
+}
+
+.movie-results {
+  margin: 0rem;
+  width: 25%;
+  padding: 1rem;
+}
+
+.movie-results img {
+  border-radius: 10px;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
