--- a/styling/style.scss
+++ b/styling/style.scss
@@ -93,67 +93,68 @@ nav {
 .movie-body {
     background-color: #1e1f26;
     width: 60%;
-    min-width: 1100px;
+    min-width: 1150px;
     margin: auto;
     h1 {
         font-size: 3rem;
-        padding:1rem 0;
+        padding: 1rem 0;
         font-family: "Roboto", sans-serif;
         color: white;
-    } h2{
+    }
+    h2 {
         font-family: "Roboto", sans-serif;
         color: white;
     }
 }
 
-.trending-movies, .now-playing{
+.trending-movies,
+.now-playing {
     display: flex;
     width: 70%;
 }
 
-.popular-people{
+.popular-people {
     display: flex;
     width: 100%;
 }
 
-.movie-flex{
+.movie-flex {
     display: flex;
 }
 
-.now-playing-news{
+.now-playing-news {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     width: 30%;
     padding: 0 1rem;
-    h1{
+    h1 {
         margin: 0;
     }
-    ul{
+    ul {
         list-style-type: none;
         color: white;
         font-size: 1.1rem;
     }
 }
 
-.weekly-trend{
+.weekly-trend {
     display: flex;
     flex-direction: column;
     margin: none;
-    a{
+    a {
         color: #d0e1f9;
         text-decoration: none;
         font-size: 1.1rem;
         padding: 1em;
         font-family: "Roboto", sans-serif;
-        &:hover{
+        &:hover {
             text-decoration: underline;
         }
     }
 }
 
-
-.more-info{
+.more-info {
     text-decoration: none;
     font-size: 1.5rem;
     font-family: "Roboto", sans-serif;
@@ -173,48 +174,47 @@ nav {
     margin: 0.4rem;
 }
 
-.markup-image{
+.markup-image {
     width: 100%;
 }
 
-.markup-details{
+.markup-details {
     border: 1px solid blue;
-    background-color:#283655 
+    background-color: #283655;
 }
 
-.detail-header{
-   background-color:#283655 ;
+.detail-header {
+    background-color: #283655;
     display: flex;
     padding: 0 1rem;
     justify-content: space-between;
 }
-.detail-header2{
-    background-color:#283655 ;
-     display: flex;
-     padding: 0 1rem;
-     justify-content: space-between;
- }
+.detail-header2 {
+    background-color: #283655;
+    display: flex;
+    padding: 0 1rem;
+    justify-content: space-between;
+}
 
-.trailer{
-    cursor:pointer;
-    &:hover{
+.trailer {
+    cursor: pointer;
+    &:hover {
         text-decoration: underline;
         color: #d0e1f9;
     }
 }
 
-
 // overlay
 
-.overlay-container{
+.overlay-container {
     position: relative;
-    img{
+    img {
         display: block;
     }
-    .overlay{
+    .overlay {
         overflow-y: scroll;
-        position: absolute; 
-        top: 0; 
+        position: absolute;
+        top: 0;
         background: rgb(0, 0, 0);
         background: rgba(0, 0, 0, 0.9); /* Black see-through */
         opacity: 0;
@@ -222,14 +222,15 @@ nav {
         padding: 1rem;
         height: 100%;
         font-family: "Roboto", sans-serif;
-        &:hover{
+        &:hover {
             opacity: 1;
         }
     }
 }
 
-
-.footer-row1, .footer-row2, .footer-row3{
+.footer-row1,
+.footer-row2,
+.footer-row3 {
     display: flex;
     background: black;
     justify-content: center;
@@ -238,23 +239,42 @@ nav {
     font-family: "Roboto", sans-serif;
 }
 
-.footer-row1{
+.footer-row1 {
     margin-top: 3vh;
 }
 
-.footer-row3{
+.footer-row3 {
     display: flex;
     align-items: center;
     padding: 1rem;
 }
 
-.footer-row1 ul{
-    
+.footer-row1 ul {
     list-style-type: none;
-    display:flex;
-    li{
+    display: flex;
+    li {
         font-size: 1.5rem;
         padding: 1rem;
         color: #d0e1f9;
+    }
+}
+
+
+.search-results{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background: #283655;
+    width: 100%;
+    margin-top: 2vh;
+    border-radius: 50px;
+}
+.movie-results{
+    margin: 0rem;
+    width: 25%;
+    padding: 1rem;
+    img{
+        border-radius: 10px;
+        width: 100%;
     }
 }
