--- a/styling/style.scss
+++ b/styling/style.scss
@@ -78,6 +78,7 @@ nav {
     width: 100%;
     border: none;
     background: transparent;
+    color: white;
     &:focus {
         background: transparent;
     }
@@ -204,6 +205,8 @@ nav {
     }
 }
 
+
+
 // overlay
 
 .overlay-container {
@@ -267,14 +270,39 @@ nav {
     background: #283655;
     width: 100%;
     margin-top: 2vh;
-    border-radius: 50px;
 }
 .movie-results{
     margin: 0rem;
     width: 25%;
     padding: 1rem;
+    position: relative;
     img{
         border-radius: 10px;
         width: 100%;
     }
 }
+
+// Search Overlay
+.results-overlay{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+    background: #4d648d;
+    opacity: 0.6;
+    font-family: "Roboto", sans-serif;
+}
+
+.results-overlay2{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+    background: #4d648d;
+    opacity: 0.6;
+    font-family: "Roboto", sans-serif;
+    margin: auto;
+}
+
