--- a/styling/style.css
+++ b/styling/style.css
@@ -261,6 +261,29 @@ nav .nav-btns {
   color: #d0e1f9;
 }
 
+.movie-results {
+  position: relative;
+}
+
+.movie-results img {
+  display: block;
+}
+
+.movie-results .overlay {
+  overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  background: black;
+  background: rgba(0, 0, 0, 0.9);
+  /* Black see-through */
+  opacity: 0;
+  margin: auto;
+  padding: 1rem;
+  height: 100%;
+  color: white;
+  font-family: "Roboto", sans-serif;
+}
+
 .overlay-container {
   position: relative;
 }
@@ -386,5 +409,9 @@ nav .nav-btns {
   opacity: 0.6;
   font-family: "Roboto", sans-serif;
   margin: auto;
+}
+
+.close {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
