--- a/styling/style.scss
+++ b/styling/style.scss
@@ -195,6 +195,15 @@ nav {
     display: flex;
     padding: 0 1rem;
     justify-content: space-between;
+    align-items: center;
+    a{
+        text-decoration: none;
+        color: black;
+        background: yellow;
+        padding: 0.5rem;
+        font-weight: 3rem;
+        border-radius: 10px;
+    }
 }
 
 .trailer {
