--- a/styling/style.css
+++ b/styling/style.css
@@ -426,4 +426,122 @@ nav .nav-btns {
 .close {
   color: white;
 }
+
+.secondary-body {
+  width: 60%;
+  margin: auto;
+  min-width: 1150px;
+}
+
+.secondary-body h1 {
+  font-family: "Roboto", sans-serif;
+  color: white;
+}
+
+.secondary-playing {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.secondary-container {
+  color: white;
+  font-family: "Roboto", sans-serif;
+  max-width: 225px;
+  margin: 0.1rem;
+}
+
+.secondary-overlay {
+  position: relative;
+}
+
+.secondary-overlay img {
+  display: block;
+}
+
+.secondary-overlay .overlay2 {
+  overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  background: black;
+  background: rgba(0, 0, 0, 0.9);
+  /* Black see-through */
+  opacity: 0;
+  margin: auto;
+  padding: 1rem;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+.secondary-overlay .overlay2:hover {
+  opacity: 1;
+}
+
+.secondary-image {
+  width: 100%;
+}
+
+.secondary-markup-details {
+  min-height: 15vh;
+}
+
+.secondary-detail-header {
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.secondary-detail-header2 {
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.secondary-detail-header2 a {
+  text-decoration: none;
+  color: black;
+  background: yellow;
+  padding: 0.5rem;
+  font-weight: 3rem;
+  border-radius: 10px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #283655;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d0e1f9;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: white;
+}
 /*# sourceMappingURL=style.css.map */
