--- a/styling/style.scss
+++ b/styling/style.scss
@@ -338,3 +338,103 @@ nav {
     color: white;
 }
 
+// Newly
+
+.secondary-body{
+    width: 60%;
+    margin: auto;
+    min-width: 1150px;
+    h1{
+        font-family: "Roboto", sans-serif;
+        color: white;
+    }
+}
+
+.secondary-playing{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.secondary-container {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    max-width: 225px;
+    margin: 0.1rem;
+
+}
+
+.secondary-overlay {
+    position: relative;
+    img {
+        display: block;
+    }
+    .overlay2 {
+        overflow-y: scroll;
+        position: absolute;
+        top: 0;
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.9); /* Black see-through */
+        opacity: 0;
+        margin: auto;
+        padding: 1rem;
+        height: 100%;
+        font-family: "Roboto", sans-serif;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+.secondary-image {
+    width: 100%;
+}
+
+.secondary-markup-details {
+    min-height: 15vh;
+}
+
+.secondary-detail-header {
+    background-color: black;
+    display: flex;
+    padding: 0 1rem;
+    justify-content: space-between;
+}
+.secondary-detail-header2 {
+    background-color: black;
+    display: flex;
+    padding: 0 1rem;
+    justify-content: space-between;
+    align-items: center;
+    a{
+        text-decoration: none;
+        color: black;
+        background: yellow;
+        padding: 0.5rem;
+        font-weight: 3rem;
+        border-radius: 10px;
+    }
+}
+
+// .scroll-bar
+    /* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #283655;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #d0e1f9;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: white;
+  }
