--- a/styling/style.css
+++ b/styling/style.css
@@ -235,7 +235,7 @@ nav .nav-btns div a {
 }
 
 .markup-container {
-  border: 2px solid pink;
+  border: 1px solid pink;
   color: white;
   font-family: "Roboto", sans-serif;
   width: 100%;
@@ -283,6 +283,22 @@ nav .nav-btns div a {
   padding: 0.5rem;
   font-weight: 3rem;
   border-radius: 10px;
+}
+
+@media (max-width: 1160px) {
+  .movie-body {
+    margin: auto;
+    min-width: 100%;
+  }
+  .movie-flex {
+    margin: auto;
+    width: 95%;
+    border: 1px solid blue;
+    font-size: 1rem;
+  }
+  .markup-container {
+    width: 100%;
+  }
 }
 
 .trailer {
