--- a/styling/style.scss
+++ b/styling/style.scss
@@ -175,7 +175,7 @@ nav {
 }
 
 .markup-container {
-    border: 2px solid pink;
+    border: 1px solid pink;
     color: white;
     font-family: "Roboto", sans-serif;
     width: 100%;
@@ -211,6 +211,23 @@ nav {
         font-weight: 3rem;
         border-radius: 10px;
     }
+}
+
+@media (max-width:1160px){
+    .movie-body{
+        margin: auto;
+        min-width: 100%;
+    }
+    .movie-flex{
+        margin: auto;
+        width: 95%;
+        border:1px solid blue;
+        font-size: 1rem;
+    }
+    .markup-container{
+        width: 100%;
+    }
+    
 }
 
 .trailer {
