--- a/styling/style.scss
+++ b/styling/style.scss
@@ -615,7 +615,6 @@ nav {
             font-size: 2.2rem;
         }
     }
-    border: 1px solid blue;
     margin: 8vh auto;
 }
 
@@ -670,4 +669,9 @@ nav {
         width: 5%;
         height: 5vh;
     }
+}
+
+.homepage{
+    margin: auto;
+    width: 80%;
 }
